--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -9,7 +9,7 @@
     "build": "npm run gen && tsc",
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
     "watch": "npx nodemon -e yml,ts,graphql,json -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
-    "test": "jest --runInBand",
+    "test": "jest",
     "sam": "cd ../ && make watch",
     "fix": "eslint --fix ./",
     "typecheck": "npm run gen && tsc --noEmit"
