--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -26,6 +26,7 @@
     "commander": "^10.0.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.17.2",
+    "highlight.js": "^11.7.0",
     "jose": "^4.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -35,9 +36,15 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-markdown": "^8.0.6",
     "react-router-dom": "^6.8.1",
     "react-router-hash-link": "^2.4.3",
+    "react-syntax-highlighter": "^15.5.0",
     "react-terminal-ui": "github:ylilarry/react-terminal-ui",
+    "rehype-highlight": "^6.0.0",
+    "rehype-remove-comments": "^5.0.0",
+    "remark-gfm": "^3.0.1",
+    "remark-github": "^11.2.4",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
