--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cd apollo && npm run test",
-    "build": "npm run typecheck && sam build --parallel --cached",
-    "start": "npm run build && sam local start-api -p 4000 --warm-containers lazy --env-vars ./devenv.json",
+    "build": "npm run typecheck && sam build",
+    "start": "npm run build && sam local start-api -p 4000 --warm-containers eager --env-vars ./devenv.json",
     "logs": "sam logs --stack-name graphql-service --tail",
     "deploy": "npm run build && sam deploy",
     "typecheck": "(cd apollo && npm run typecheck) && (cd ../payment-service && npm run typecheck) && (cd ../auth-service && npm run typecheck) && (cd ../cli && npm run typecheck) && (cd ../gateway-service && npm run typecheck) && echo All good!",
