--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -18,8 +18,10 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.114",
     "@types/node-fetch": "^2.6.2",
     "@types/uuid": "^9.0.1",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1343.0",
     "chalk": "^5.2.0",
     "jest": "^29.4.3",
