--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -11,7 +11,7 @@
     "try-build-all": "(npm run try-build-gateway) && (npm run try-build-cors)",
     "build": "(npm run symlink) && (npm run gen) && (npm run try-build-all) && (sam build)",
     "start": "npm run build && sam local start-api -p 6000 --warm-containers eager --env-vars ./devenv.json",
-    "watch": "nodemon -e go,graphql,yaml -i generated__graphql.go --signal SIGINT -x 'npm run start || exit 1'",
+    "watch": "nodemon -e go,graphql,yaml -i __generated__/ --signal SIGINT -x 'npm run start || exit 1'",
     "logs": "sam logs --stack-name gateway-service --tail",
     "deploy": "npm run build && sam deploy",
     "typecheck": "(npm run gen) && (npm run try-build-all)",
