--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -4,12 +4,17 @@
   "description": "This is a sample template for gateway-service - Below is a brief explanation of what we have generated for you:",
   "main": "index.js",
   "scripts": {
-    "symlink": "mkdir -p .symlinks && ln -sFh \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
+    "symlink:linux": "mkdir -p .symlinks && ln -sFT \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
+    "symlink:mac": "mkdir -p .symlinks && ln -sFh \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
+    "symlink": "(npm run symlink:mac) || (npm run symlink:linux)",
     "gen": "go run github.com/Khan/genqlient",
     "try-build-gateway": "cd gateway && go build && rm gateway",
     "try-build-cors": "cd cors && go build && rm cors",
     "try-build-all": "(npm run try-build-gateway) && (npm run try-build-cors)",
-    "build": "(npm run symlink) && (npm run gen) && (npm run try-build-all) && (sam build)",
+    "prebuild": "(npm run symlink) && (npm run gen) && (npm run try-build-all)",
+    "build:x86": "(npm run prebuild) && (sam build --parameter-overrides Architecture=x86_64 --use-container --build-image=public.ecr.aws/sam/build-go1.x:latest-x86_64)",
+    "build:arm64": "(npm run prebuild) && (sam build --parameter-overrides Architecture=arm64)",
+    "build": "npm run build:arm64",
     "start": "npm run build && sam local start-api -p 6000 --warm-containers eager --env-vars ./devenv.json",
     "watch": "nodemon -e go,graphql,yaml -i __generated__/ --signal SIGINT -x 'npm run start || exit 1'",
     "logs": "sam logs --stack-name gateway-service --tail",
