--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,33 +1,45 @@
 name: Publish package to GitHub Packages
 on:
   push:
-    branches: ["release"]
+    branches-ignore:
+      - "releases/**"
+
+permissions:
+  id-token: write
+  contents: write
+
+defaults:
+  run:
+    shell: bash
+
 jobs:
-  build:
+  test-graphql-service:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Install poetry
-        run: pipx install poetry
-
-      - name: Setup Python
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v3
+      - uses: ./.github/setup-push
         with:
-          python-version: "3.9"
-          cache: "poetry"
-
-      - name: Install dependencies
+          AWS_GITHUBACTIONROLE_ARN: ${{ secrets.AWS_GITHUBACTIONROLE_ARN }}
+      - name: Build
         run: |
-          poetry install --no-interaction
-
-      - name: Build source
+          (cd graphql-service/apollo && npm ci && npm run build)
+      - name: Test
         run: |
-          ./initenv.bash
-          source ./devenv.bash
-          npm ci
-          npm run build
+          cd graphql-service/apollo
+          npm run test
+
+  test-gateway-service:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/setup-push
+        with:
+          AWS_GITHUBACTIONROLE_ARN: ${{ secrets.AWS_GITHUBACTIONROLE_ARN }}
+      - name: Build
+        run: |
+          (cd graphql-service/apollo && npm ci && npm run build)
+          (cd gateway-service && npm ci && npm run build:x86)
+      - name: Test
+        run: |
+          cd gateway-service
+          npm run test
