[GraphQL] Fix authentication problem in lambdaHandler

--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cd apollo && npm run test",
     "build": "npm run typecheck && sam build",
-    "start": "npm run build && sam local start-api -p 4000 --warm-containers eager --env-vars ./devenv.json",
+    "start": "(npm run build --parallel --cached) && (sam local start-api -p 4000 --env-vars ./devenv.json)",
+    "watch": "npx nodemon -w ./apollo -e yml,ts,graphql,json -i ./apollo/__generated__ --signal SIGINT -x \"(npm run start) || exit 1\"",
     "logs": "sam logs --stack-name graphql-service --tail",
     "deploy": "npm run build && sam deploy",
     "typecheck": "(cd apollo && npm run typecheck) && (cd ../payment-service && npm run typecheck) && (cd ../auth-service && npm run typecheck) && (cd ../cli && npm run typecheck) && (cd ../gateway-service && npm run typecheck) && echo All good!",
