--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -5,11 +5,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
+    "gen": "graphql-codegen --config codegen.yml",
     "prebuild": "npm run gen",
     "build": "(npm run prebuild) && tsc",
-    "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
-    "watch": "npx nodemon -e yml,ts,graphql,json -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
+    "start": "(npm run build) && (node --experimental-specifier-resolution=node ./dist/devserver.js)",
+    "watch": "npx nodemon -e yml,ts,graphql,json -i __generated__/ -d 1 --signal SIGINT -x \"npm run start\"",
     "test": "jest",
     "sam": "cd ../ && make watch",
     "fix": "eslint --fix ./",
