--- a/cli/package.json
+++ b/cli/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "poetry build",
-    "deploy": "npm run build && poetry publish -r testpypi",
     "gen": "turms gen",
-    "typecheck": "npm run gen && pyright .",
-    "watch": "nodemon --exec 'npm run gen && npm run typecheck' --watch . --ext py,json,graphql,yaml --delay 1 --ignore '**/__pycache__/' --ignore '**/__generated__/**'"
+    "typecheck": "(npm run gen) && (pyright .)",
+    "build": "(npm run typecheck) && (poetry build)",
+    "test": "pytest -s -n auto",
+    "deploy": "(npm run build) && (poetry publish -r testpypi)",
+    "watch": "nodemon --exec 'echo \\x1Bc && (npm run gen) && (npm run typecheck)' --watch . --ext py,json,graphql,yaml --delay 1 --ignore '**/__pycache__/' --ignore '**/__generated__/**'"
   },
   "author": "",
   "license": "ISC"
