--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -21,6 +21,7 @@ aws-requests-auth = "^0.4.3"
 flask-cors = "^3.0.10"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 tomli = "^2.0.1"
+pyjwt = {extras = ["crypto"], version = "^2.6.0"}
 
 [tool.poetry.scripts]
 fastcharge = 'fastchargeapi_cli.main:fastcharge'
@@ -34,6 +35,7 @@ pyright = "^1.1.299"
 boto3 = "^1.26.114"
 pytest-xdist = "^3.2.1"
 pytest = "^7.3.1"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
