--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,39 +7,14 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
-nodeenv = "^1.7.0"
-click = "^8.1.3"
-google-auth = "^2.16.0"
-google-auth-oauthlib = "^0.8.0"
-django = "^4.1.5"
-django-client-framework = {git = "https://github.com/kaleido-public/django-client-framework.git", rev = "staging"}
-flask = "^2.2.2"
-flask-lambda = "^0.0.4"
-wtforms = "^3.0.1"
-flask-restful = "^0.3.9"
-werkzeug = "^2.2.2"
-chalice = "^1.27.3"
-strawberry-graphql = {extras = ["debug-server"], version = "^0.154.1"}
-pathos = "^0.3.0"
-pytest = "^7.2.1"
-firebase-admin = "^6.0.1"
-pyjwt = {extras = ["crypto"], version = "^2.6.0"}
-ipython = "^8.8.0"
-cryptography = "^39.0.0"
-lambda-cache = "^0.8.1"
-joblib = "^1.2.0"
-diskcache = "^5.4.0"
-stripe = "^5.0.0"
-schema = "^0.7.5"
-libtmux = "^0.21.0"
-boto3 = "^1.26.69"
-
-[tool.poetry.dev-dependencies]
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
 pylint = "^2.16.1"
 black = "^23.1.0"
+ipython = "^8.8.0"
+nodeenv = "^1.7.0"
+aws-sam-cli = "^1.80"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
