--- a/graphql-service/apollo/tsconfig.json
+++ b/graphql-service/apollo/tsconfig.json
@@ -1,33 +1,24 @@
 {
-  "compilerOptions": {
-    "experimentalDecorators": true, /* Enable experimental support for TC39 stage 2 draft decorators. */
-    "skipLibCheck": true,
-    "rootDirs": [
-      "./"
-    ],
-    "outDir": "dist",
-    "lib": [
-      "es2022"
-    ],
-    "target": "es2022",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "types": [
-      "node",
-    ],
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictNullChecks": true,
-    "useUnknownInCatchVariables": true,
-    "strictFunctionTypes": false,
-    "strictPropertyInitialization": false, // doesn't work with our Item type declarations in models.ts
-    "allowJs": true
-  },
-  "exclude": [
-    "node_modules",
-    "dist",
-  ]
+    "compilerOptions": {
+        "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
+        "skipLibCheck": true,
+        "rootDirs": ["./"],
+        "outDir": "dist",
+        "lib": ["es2022"],
+        "target": "es2022",
+        "module": "ES2022",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "types": ["node"],
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "strictBindCallApply": true,
+        "strictNullChecks": true,
+        "useUnknownInCatchVariables": true,
+        "strictFunctionTypes": false,
+        "strictPropertyInitialization": false, // doesn't work with our Item type declarations in models.ts
+        "allowJs": true
+    },
+    "exclude": ["node_modules", "dist"]
 }
