[MISC] Update project settings

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ dist
 build
 *.pyc
 .docker
-.aws-sam
 .pytest_cache
 **/.symlinks/
 **/.aws-sam/
 **/__pycache__/
 **/__generated__/
+.coverage
+cov.xml
